methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:21: error: type mismatch;
 found   : Unit
 required: Boolean
  } while (iz = false)
              ^